# moai-adk

./: .SKILLS-OPTIMIZATION-PR-SUMMARY.md  .STYLE-FIXES-SUMMARY.txt  .biomeignore  .claude  .claudeignore  .coderabbit.yaml  .coverage  .env.glm  .flake8  .gitattributes  .gitignore  .goreleaser.yml  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .pymarkdown  .pypirc.template  2025-09-28-session-start-hook-moai-adk-moai-adk.txt  2025-09-30-session-start-hook-moai-adk-moai-adk.txt  2026-01-29-this-session-is-being-continued-from-a-previous-co.txt  2026-02-05-this-session-is-being-continued-from-a-previous-co.txt  2026-05-11-020042-this-session-is-being-continued-from-a-previous-c.txt  =0.40.0  @AGENTS.md  @CLAUDE.local.md  AGENT-AUTO-DELEGATION-IMPROVEMENTS.md  AGENTS.md  AGENT_FACTORY_LOCAL_OPTIMIZATION_REPORT.md  AGENT_FACTORY_OPTIMIZATION_REPORT.md  AGENT_FINAL_OPTIMIZATION_REPORT.md  AGENT_GUIDANCE_UPDATE_REPORT.md  AGENT_OPTIMIZATION_ENHANCED_PLAN.md  ALFRED_AGENTS_SKILLS_AUDIT_REPORT.md  ALFRED_EXPANSION_VERIFICATION.txt  ALFRED_SKILLS_EXPANSION_SUMMARY.md  ALL_SKILLS_LIST.md  ANALYSIS-CLI-DOCS-SYNC.md  ANALYSIS-SCRIPTS-HOOKS-DOCUMENTATION.md  ANALYSIS_SUMMARY.md  BUGFIX-ES-MODULE-HOOK-ERROR-DEPRECATED.md  (+195 more)
docs/: .eslintrc.json  .gitignore  .markdown-link-check.json  .test-report.md  CONSTITUTION_COMPLIANCE.md  DEPLOYMENT_GUIDE.md  FONT_OPTIMIZATION.md  IMPROVEMENT_SUMMARY.txt  INSTALLATION.md  MIGRATION-0.1-to-0.2.md  MOAI-ADK-0.2.0-GUIDE.md  MOAI-ADK-0.2.1-GUIDE.md  MOAI-ADK-0.2.2-GUIDE.md  MOAI-ADK-GUIDE.md  NEW-STRUCTURE.md  PACKAGE_API.md  PAGEFIND-MIGRATION.md  PERFORMANCE_BENCHMARK.md  PERFORMANCE_OPTIMIZATION.md  PHASE-3-3-QUALITY-REPORT.md  QUICK-START.md  QUICK_START_UI_UX.md  README-PAGEFIND.md  README.md  SKILL-UPGRADE-PLAN-v4.0.md  SKILL-UPGRADE-SUMMARY.md  SPEC-CMD-IMPROVE-001-W2-ANALYSIS.md  TECHNICAL_QA_ANALYSIS_REPORT.md  TROUBLESHOOTING.md  UI-UX_ANALYSIS_REPORT.md  UI-UX_COMPREHENSIVE_ANALYSIS_REPORT.md  UI-UX_IMPROVEMENT_FINAL_REPORT.md  UI-UX_VERIFICATION_REPORT.md  UI_UX_AUDIT_REPORT.md  UI_UX_IMPROVEMENT_REPORT.md  UI_UX_IMPROVEMENT_SUMMARY.md  WINDOWS_SETUP.md  _config.yml  accessibility-audit.spec.ts  accessibility-code-quality.spec.ts  (+69 more)
docs/.next/: _events.json  build-manifest.json  react-loadable-manifest.json  trace
docs/.vercel/: project.json
docs/.vitepress/: config.mts  config.ts
docs/__tests__/: app-router.test.js  bun-biome-migration.test.ts  content-creation.test.ts  foundation-setup.test.ts  migration.test.ts  setup.ts
docs/advanced/: doctor-advanced.md  template-customization.md
docs/agents/: cc-manager.md  code-builder.md  debug-helper.md  doc-syncer.md  git-manager.md  implementation-planner.md  index.md  project-manager.md  quality-gate.md  spec-builder.md  tag-agent.md  tdd-implementer.md  trust-checker.md
docs/alfred/: index.md
docs/analysis/: scripts-directory-analysis.md  tag-system-critical-analysis.md  tag-system-v5-design.md
docs/api/: backup-utils.md  cli.md  core.md  hierarchy.html  i18n-api.md  index.html  index.md  moai_adk.__init__.md  moai_adk._version.md  moai_adk.cli.__init__.md  moai_adk.cli.__main__.md  moai_adk.cli.banner.md  moai_adk.cli.commands.md  moai_adk.cli.helpers.md  moai_adk.cli.wizard.md  moai_adk.commands.__init__.md  moai_adk.commands.build_command.md  moai_adk.commands.spec_command.md  moai_adk.config.md  moai_adk.core.__init__.md  moai_adk.core.config_manager.md  moai_adk.core.directory_manager.md  moai_adk.core.docs.__init__.md  moai_adk.core.docs.api_generator.md  moai_adk.core.docs.documentation_builder.md  moai_adk.core.docs.release_notes_converter.md  moai_adk.core.exceptions.md  moai_adk.core.file_manager.md  moai_adk.core.git_lock_manager.md  moai_adk.core.git_manager.md  moai_adk.core.git_strategy.md  moai_adk.core.quality.__init__.md  moai_adk.core.quality.constitution_checker.md  moai_adk.core.quality.coverage_manager.md  moai_adk.core.quality.guideline_checker.md  moai_adk.core.quality.quality_gates.md  moai_adk.core.quality.tdd_manager.md  moai_adk.core.resource_version.md  moai_adk.core.security.md  moai_adk.core.system_manager.md  (+53 more)
docs/api-reference/: agents.md  core-git.md  core-installer.md  core-tag.md  core-template.md
docs/app/: layout.jsx  layout.tsx
docs/cc-docs/: cli-reference.md  hooks.md  interactive-mode.md  model-config.md  output-styles.md  quickstart.md  reduce-hallucinations.md  sdk-python.md  sdk-typescript.md  sdk.md  settings-en.md  terminal-config.md
docs/claude/: agents.md  commands.md  hooks-deployment.md  hooks-detailed.md  hooks.md  output-styles.md
docs/cli/: doctor.md  index.md  init.md  restore.md  restore.md.bak2  status.md  update.md
docs/commands/: agent-commands.md  alfred-commands.md  cli-reference.md  cli.md
docs/components/: CoreWebVitalsOptimizer.tsx  CustomSearch.tsx  NextraPagefindTheme.tsx  OptimizedImage.tsx  PagefindHighlight.tsx  PagefindSearch.tsx  SearchHighlightProvider.tsx
docs/concepts/: index.md  moai-workflow-concept.md  spec-first-tdd.md  trust-principles.md
docs/configuration/: advanced-settings.md  config-json.md  personal-vs-team.md
docs/content/: _app.tsx  index.mdx
docs/contributing/: code-style.md  development-setup.md  index.md  overview.md  pull-request-process.md  testing.md
docs/coverage/: foundation-setup.ts.html
docs/design/: major-v3-master.md  v2.14.0-release-plan.md
docs/examples/: index.md  todo-app-fullstack.md
docs/getting-started/: concepts.md  first-project.md  index.md  installation.md  project-setup.md  quick-start.md
docs/guide/: faq.md  getting-started.md  spec-first-tdd.md  tag-system.md  what-is-moai-adk.md  workflow.md
docs/guides/: CLI_COMMANDS.md  VERSION_MANAGEMENT.md  alfred-superagent.md  architecture.md  getting-started.md  index.md  installation.md  quick-start.md  spec-first-tdd.md  tag-system.md  trust-principles.md  workflow.md
docs/help/: faq.md
docs/hooks/: custom-hooks.md  overview.md  post-tool-use-hook.md  pre-tool-use-hook.md  session-start-hook.md
docs/i18n/: en.json  ja.json  ko.json  th.json  zh.json
docs/migration/: MIGRATION_GUIDE.md
(+13881 files in other folders)
