# @CODE:PY314-001 | SPEC: SPEC-PY314-001.md | TEST: tests/unit/test_foundation.py
[project]
name = "moai-adk"
version = "0.3.0"
description = "MoAI Agentic Development Kit - SPEC-First TDD Framework with Alfred SuperAgent"
authors = [
    { name = "MoAI Team", email = "dev@modu.ai" }
]
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "ai",
    "tdd",
    "spec",
    "development",
    "automation",
    "alfred",
    "claude-code",
    "spec-first"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
]

# 핵심 의존성 (6개)
dependencies = [
    "click>=8.1.0",         # CLI 프레임워크
    "rich>=13.0.0",         # 터미널 출력
    "questionary>=2.0.0",   # 대화형 프롬프트
    "gitpython>=3.1.0",     # Git 조작
    "jinja2>=3.1.0",        # 템플릿 엔진
    "pyyaml>=6.0",          # YAML 파싱
]

[project.optional-dependencies]
# 개발 의존성 (5개)
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

# 테스트 전용
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

# 문서 빌드
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

# 진입점
[project.scripts]
moai = "moai_adk.__main__:main"

[project.urls]
Homepage = "https://github.com/modu-ai/moai-adk"
Documentation = "https://moai-adk.vercel.app"
Repository = "https://github.com/modu-ai/moai-adk"
Issues = "https://github.com/modu-ai/moai-adk/issues"
Changelog = "https://github.com/modu-ai/moai-adk/blob/main/CHANGELOG.md"

# 빌드 시스템 (uv + hatchling)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moai_adk"]

# Ruff 설정
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]  # 라인 길이는 100으로 설정했으므로 E501 무시

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy 설정
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest 설정
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=moai_adk",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
